--- a/scss/restaurants.scss
+++ b/scss/restaurants.scss
@@ -1,392 +1,16 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
 
+@import "./utils/mixins";
 
-// PADDINGS
-$padding-feature-restau: (vertical:55px, horizontal:21px);
-$padding-desktop: 10%;
+@import "./utils/variables";
 
-// RESPONSIVE
-$breakpoints: (tablet:760px, desktop:1200px);
+@import "./base/fonts";
 
-// VARIABLES COULEURS
-$color-primary: #9356DC;
-$color-secondary: #FF79DA;
-$color-tertiary: #99E2D0;
-$percent: 10%;
+@import "./pages/pages";
 
-$dark-grey: lighten(black, 20%);
-$mid-grey: lighten(black, 90%);
-$light-grey: lighten(black, 95%);
+@import "./layouts/footer";
 
-// VARIABLES LAYOUT CARDS
-$border-radius-cards: 20px;
+@import "./components/boutons";
 
-// MIXINS RESPONSIVE
-@mixin tablet { 
-    @media all and (min-width: map-get($breakpoints, tablet)){
-        @content;
-    }
-}
+@import "./components/icons";
 
-@mixin desktop-only {
-    @media all and (min-width: map-get($breakpoints, desktop)){
-        @content;
-    }
-}
-
-// MIXIN PADDINGS DESKTOP
-@mixin padding-desktop($padding: $padding-desktop){ 
-    padding-left: $padding;
-    padding-right: $padding;
-}
-
-//MIXINS CARDS
-@mixin box-shadow($percent) {
-    box-shadow: 0px 4px 7px 1px rgba(0, 0, 0, $percent);
-}
-
-@mixin layout-cards {
-    border-radius: $border-radius-cards; 
-    @include box-shadow(0.1);
-}
-
-// MIXIN FLEXBOX
-@mixin flexbox($dir, $justify, $align, $wrap){ 
-    display: flex;
-    flex-direction: $dir;
-    justify-content: $justify;
-    align-items: $align;
-    flex-wrap: $wrap;
-}
-
-// MIXIN TEXT-OVERFLOW
-@mixin text-overflow {
-    text-overflow: ellipsis;
-    overflow: hidden; 
-    white-space: nowrap;
-}
-
-h4 {
-    font-family: 'Shrikhand', cursive;
-    font-size: 1.1em;
-    padding-bottom: 15px;
-}
-
-header {
-    @include flexbox(row, center, unset, unset);
-    padding: 22px 0 12px;
-      
-    img {
-        height: 28px;
-    }
-
-    .header__icon {
-        font-size: 1.2em;
-        color: $dark-grey;
-        position: absolute;
-        left: 23px;
-        &:hover {
-            color: $color-primary;
-        }
-        @include desktop-only{
-            left:10%;
-        }
-    }
-}
-
-.page-link {
-    text-decoration: none;
-    color: inherit;
-}
-
-.photo-restau {
-    width: 100%;
-    height: 260px;
-    object-fit: cover;
-    @include desktop-only {
-        height: 400px;
-        
-    }
-}
-
-.menu {
-    background-color: $light-grey;
-    border-radius: 35px 35px 0 0 ;
-    margin-top: -50px;
-    position: relative;
-    
-    &__btn {
-        @include flexbox(row, center, unset, unset);
-        padding: 10px 0 60px 0;
-        .btn {
-            width: 195px;
-        }
-    }
-  
-}
-
-.menu-heading {
-    @include flexbox(row, space-between, flex-start, unset);
-    padding: 25px 25px 15px 18px;
-    @include tablet {
-        justify-content: space-evenly;
-    }
-    @include desktop-only {
-        justify-content: center;
-    }
-    &__title {
-        font-family: 'Shrikhand', cursive;
-        font-size: 1.6em;
-        letter-spacing: 1px;
-    }
-    
-}
-
-.menu-list {
-    opacity:1;
-    @include tablet {
-        @include flexbox(row, center, unset, wrap);
-    }
-}
-
-.menu-content {
-    padding: 15px;
-    animation: menu-fadein ease-in-out 800ms forwards; 
-    opacity:0;
-    @for $i from 1 through 3 {
-        &--#{$i} {
-            animation-delay: 400ms * $i;
-        }
-    }
-    &__heading {
-        font-size: 1.1em;
-        text-transform: uppercase;
-        font-weight: 400;
-        margin-bottom: 5px;
-        margin-left: 5px; 
-    }
-    &__bottombar {
-        width: 40px;
-        height: 3px;
-        background-color: $color-tertiary;
-        margin-bottom: 15px;   
-        margin-left: 5px; 
-    }
-}
-
-.menu-card { 
-    @include layout-cards;
-    @include flexbox(row, flex-start, flex-end, nowrap);
-    background-color: #fff;
-    height: 70px;
-    overflow: hidden;
-    margin: 15px 0;
-    @include tablet {
-        width: 350px; 
-    }
-    
-    &:active .menu-card__check, &:hover .menu-card__check{
-        width: 60px;
-        transform: translateX(0);
-    }
-    &:active .menu-card__icon,  &:hover .menu-card__icon {
-        transform: rotate(1turn);
-        opacity:1;
-    }
-  
-    &__text {
-        overflow:hidden;  
-        margin: 15px 12px;
-        flex:1;
-    }  
-    &__title {
-        font-size:1em;
-        font-weight: 500;
-        @include text-overflow;
-    }
-    &__subtitle { 
-        font-size: 0.9em;
-        font-weight : 300;
-        @include text-overflow;
-    }
-    
-    &__price {
-        font-weight: 700;
-        margin: 15px 20px 15px 0;
-    }
-    &__check { 
-        background-color: $color-tertiary;
-        width: 0;
-        height: 100%;
-        border-radius: 0 $border-radius-cards $border-radius-cards 0;
-        @include flexbox(row, center, center, unset);
-        transition: all 400ms ease-in-out;
-        transform: translateX(100%);
-    }
-    &__icon {
-        color: #fff;
-        font-size: 20px;
-        transition: all 400ms 100ms ease-in-out;
-        opacity:0;
-    } 
-}
-
-@keyframes menu-fadein {
-    0%{
-        opacity:0;
-        transform: translateY(30px);
-    }
-    100% {
-        opacity: 1;
-    }
-}
-
-footer {
-    background-color: $dark-grey;
-    color: lighten($dark-grey, 80%);
-    padding: 25px 25px 40px;
-    @include desktop-only { 
-       @include padding-desktop;
-    }
-}
-
-.footer-links {
-    list-style: none;
-    font-weight: 300;
-    font-size: 0.9em;
-    @include tablet {
-        @include flexbox(row, unset, unset, wrap);
-    }
-    &__element{
-        @include flexbox(row, unset, center,unset);
-        padding: 4px 0;
-        @include tablet {
-            flex: auto;
-        }
-        &--bold {
-            font-weight: 400;
-        }
-    }
-}
-
-.footer__icon {
-    font-size: 0.8em;
-    padding-right: 12px;
-    &--rotate {
-        display: inline-block;
-        transform: rotate(-15deg); 
-        font-size: 0.65em;
-    } 
-}
-
-
-.btn {
-    font-size : 1em;
-    font-weight: 500;
-    margin: 25px;
-    height: 50px;
-    border-radius: 30px;
-    border: none;
-    background: linear-gradient(175deg, $color-secondary, $color-primary);
-    color: #fff;
-    padding: 0 20px;
-    @include box-shadow(0.2);
-    position: relative;
-    cursor: pointer;
-    z-index: 1;
-    &:hover {
-        &::after {
-            opacity:1;
-        }
-}
-    &::after { 
-        content: "";
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        border-radius: 30px;
-        background: linear-gradient(175deg, lighten($color-secondary,5) 0%, lighten($color-primary,5) 100%);
-        @include box-shadow(0.3);
-        opacity:0;
-        z-index: -1;
-        transition: opacity 300ms;
-    }
-    
-}
-
-.heart {
-    padding: 10px;
-}
-
-.heart-icon { 
-    font-size: 1.7em;
-    cursor: pointer;
-    transform: scale(0.75, 0.85);
-
-    &--empty {
-        position: absolute;
-        z-index:2;
-        color: $dark-grey;
-        opacity:1;
-        transition: opacity 1s ease-in-out;
-        &:active, &:hover {
-            opacity:0;
-        }
-    }
-
-    &--empty:active + &--full::after, &--empty:hover + &--full::after {
-        transform: translateY(-100%) rotate(500deg);
-    }
-
-    &--full {
-        position: relative;
-        z-index:1;
-        background: linear-gradient(45deg, $color-secondary, $color-primary);
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;   
-        position : relative;
-        overflow: hidden;
-        &::after {
-            content: "";
-            z-index:-1;
-            position: absolute;
-            bottom: -50%;
-            left: -50%;
-            height: 200%;
-            width: 200%;
-            background: #fff;
-            border-radius: 25%;
-            transform: translateY(0) rotate(0deg);
-            transition: transform 1.5s ease-out;
-        }
-    }
-}
-
-.menu-heading {
-    .heart-icon--empty, .heart-icon--full::after  {
-        background: $light-grey;
-    }
-}
 
